<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".unsaludo"
    android:background="@drawable/fondo3">


    <TextView
        android:id="@+id/text_txt9"
        android:layout_width="486dp"
        android:layout_height="91dp"
        android:layout_marginTop="16dp"
        android:background="#D6D31A"
        android:backgroundTint="#009E8861"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/text_txt9"
        android:textColor="@color/moradito"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt6"
        android:layout_width="332dp"
        android:layout_height="304dp"
        android:layout_marginTop="360dp"
        android:background="#D6D31A"
        android:backgroundTint="#009E8861"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/text_txt6"
        android:textColor="@color/azulito"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="286dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/purple_200"
        android:onClick="volverinicio"
        android:text="@string/button7"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt6" />

    <TextView
        android:id="@+id/text_10"
        android:layout_width="346dp"
        android:layout_height="159dp"
        android:layout_marginTop="40dp"
        android:text="@string/text_11"
        android:textColor="@color/verde_marino"
        android:textSize="23dp"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_txt9" />

</androidx.constraintlayout.widget.ConstraintLayout>