<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaDelAmorylaAmistad"
    android:background="@drawable/fondo2">


    <TextView
        android:id="@+id/txt4"
        android:layout_width="385dp"
        android:layout_height="105dp"
        android:layout_marginTop="68dp"
        android:background="#D6D31A"
        android:backgroundTint="#009E8861"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/text_txt4"
        android:textColor="@color/moradito"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_txt8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/teal_700"
        android:ems="10"
        android:hint="@string/text_txt8"
        android:inputType="textPersonName"
        android:textColor="@color/grisparatexto"
        android:textColorHint="@color/grisparatexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt4"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="286dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/purple_200"
        android:onClick="Enviar"
        android:text="@string/button5"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_txt8" />


</androidx.constraintlayout.widget.ConstraintLayout>